# Z3R0

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  COPYING.md  Dockerfile  LICENSE  Procfile  README.md  __main__.py  aerich.ini  aerichConfig.py  bot.py  build-and-push.sh  config.py-example  config_example.json  custom_commands.json  formatting.py  main.py  migrator.py  pyproject.toml  requirements.txt  tox.ini  webserver.py  zibot.py
.github/: CHANGELOG.md  CONTRIBUTING.md  FUNDING.yml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  main.yml  test.yml
api/: openweather.py  reddit.py
cogs/: admin.py  anilist.py  commands.py  custom_commands.py  debug.py  dev.py  developer.py  error_handler.py  fun.py  general.py  help.py  info.py  mcbe.py  moderator.py  music.py  pingloop.py  role.py  src.py  utility.py  utils.py  welcome.py
cogs/api/: anilist.py  anilistQuery.py  reddit.py  speedrun.py  weather.py
cogs/errors/: anilist.py  fun.py  weather.py
cogs/utilities/: barter.py  checks.py  context.py  embed_formatting.py  paginator.py  scheduling.py  tse_blocks.py
cogs/utils/: config.py  context.py  converters.py  embed_formatting.py  formatting.py  i18n.py  paginator.py  stringparamadapter.py  tse_blocks.py
cogs/utils/api/: anilist.py  anilist_query.py  pokeapi.py
core/: bot.py  checks.py  context.py  converter.py  db.py  decorators.py  embed.py  enums.py  errors.py  flags.py  menus.py  mixin.py  objects.py  views.py
data/: anime.json  custom_commands.json  guild.json
data_example/: anime.json  custom_commands.json  guild.json
docker/: Dockerfile  __main__.py  docker-compose.yml  entrypoint.sh
docker/compose-examples/basic/: docker-compose.yml
docker/compose-examples/basic-env/: docker-compose.yml
docker/compose-examples/dashboard/: docker-compose.yml
docker/compose-examples/full/: docker-compose.yml
docker/compose-examples/mysql/: docker-compose.yml
docker/compose-examples/postgresql/: docker-compose.yml
docs/: index.rst
exts/: admin.py  anime.py  cmdman.py  dev.py  error.py  error_handler.py  event.py  events.py  fun.py  image.py  info.py  meta.py  mod.py  nsfw.py  timer.py  unsorted.py  utilities.py
exts/admin/: admin.py
exts/anilist/: __init__.py  _flags.py  _pages.py  anilist.py
exts/anime/: __init__.py  _flags.py  anime.py
exts/api/: google.py  googletrans.py  graphql.py  openweather.py  piston.py
exts/dev/: __init__.py  dev.py
exts/events/: __init__.py  _views.py  events.py
exts/fun/: __init__.py  fun.py
exts/image/: __init__.py  image.py
exts/info/: __init__.py  info.py
exts/meta/: __init__.py  _custom_command.py  _flags.py  _help.py  _objects.py  _pages.py  _utils.py  meta.py
exts/mod/: _flags.py  _pages.py  mod.py
exts/nsfw/: __init__.py  nsfw.py
exts/timer/: __init__.py  timer.py
exts/unsorted/: __init__.py  unsorted.py
exts/utilities/: __init__.py  utilities.py
exts/utils/: cache.py  dbQuery.py  format.py  infoQuote.py  other.py  piglin.py  pillow.py  sql.py  tseBlocks.py
locale/: en_US.zi.lang  id_ID.zi.lang
locale/en_US/: main.ftl
migrations/models/: 0_20211009115827_init.sql  1_20211029070935_highlight.sql
src/main/: __init__.py  __main__.py
src/main/core/: __init__.py  bot.py  checks.py  colour.py  commands.py  config.py  context.py  converter.py  db.py  embed.py  enums.py  errors.py  flags.py  guild.py  i18n.py  menus.py  mixin.py  monkeypatch.py  prefix.py  views.py
src/main/exts/admin/: __init__.py  _common.py  _flags.py  _views.py  admin.py
src/main/exts/anilist/: __init__.py  _flags.py  _pages.py  _query.py  anilist.py
src/main/exts/dev/: __init__.py  dev.py
src/main/exts/events/: __init__.py  _views.py  events.py
src/main/exts/fun/: __init__.py  _flags.py  fun.py
src/main/exts/image/: __init__.py  image.py
src/main/exts/info/: __init__.py  info.py
src/main/exts/meta/: __init__.py  _checks.py  _custom_command.py  _errors.py  _flags.py  _help.py  _model.py  _objects.py  _pages.py  _utils.py  _wrapper.py  meta.py
src/main/exts/mod/: __init__.py  _flags.py  _pages.py  mod.py
src/main/exts/nsfw/: __init__.py  nsfw.py
src/main/exts/timer/: __init__.py  _views.py  timer.py
src/main/exts/unsorted/: __init__.py  (+1 more)
src/main/locale/: en-GB.ftl  en-US.ftl  en_US.ftl  id.ftl  ja.ftl
src/main/utils/: cache.py  format.py  infoQuote.py  other.py  piglin.py  pillow.py  tseBlocks.py
src/test/: conftest.py  pyproject.toml  test_core_bot.py  test_ext_fun.py  test_ext_meta.py  test_ext_meta__custom_commands.py  test_main.py
src/tests/: conftest.py
src/tse/: README.md  __init__.py  exceptions.py  interpreter.py  pyproject.toml  utils.py  verb.py
src/tse/adapter/: __init__.py  argumentadapter.py  discordadapters.py
src/tse/block/: __init__.py  breakblock.py  command.py  control.py  embedblock.py  fiftyfifty.py  helpers.py  loosevariablegetter.py  math.py  range.py  react.py  replaceblock.py  silent.py  stopblock.py  strf.py  strictvariablegetter.py  substr.py
src/tse/interface/: __init__.py
src/zibot/: __main__.py  pyproject.toml
src/zibot/core/: bot.py  checks.py  config.py  converter.py  data.py  enums.py  guild.py  i18n.py  menus.py  mixin.py  prefix.py
src/zibot/exts/admin/: _flags.py
src/zibot/exts/anilist/: anilist.py
src/zibot/exts/dev/: __init__.py
src/zibot/exts/events/: _views.py  events.py
src/zibot/exts/fun/: fun.py
src/zibot/exts/image/: image.py
src/zibot/exts/info/: __init__.py  info.py
src/zibot/exts/meta/: __init__.py  _flags.py  meta.py
src/zibot/exts/mod/: mod.py
src/zibot/exts/timer/: _views.py  timer.py
src/zibot/exts/utilities/: utilities.py
src/zibot/locale/: en-US.ftl  id.ftl  ja.ftl
src/zibot/utils/: __init__.py  algebra.py  format.py  piglin.py
src/zibot/utils/api/: googletrans.py  openweather.py  piston.py  reddit.py
utilities/: formatting.py  scheduling.py
utils/: cache.py  dbQuery.py  format.py  other.py  piglin.py  pillow.py  sql.py  tseBlocks.py
utils/api/: egs.py  google.py  googletrans.py  piston.py  reddit.py
(+10 files in other folders)
