[tool.poetry]
name = "Z3R0"
version = "3.6.3"
description = "A multi-purpose open source discord bot"
authors = ["null2264"]
license = "MPL-2.0"
packages = [
  {include = "main", from = "src"},
  {include = "tse", from = "src"}
]

[tool.poetry.scripts]
bot = "main.__main__:run"
datamigration = "main.__main__:datamigration"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.11.1"
"discord.py" = "2.2"
discord-ext-menus = "1.1"
fuzzywuzzy = "0.18.0"
humanize = "4.4.0"
jishaku = {git = "https://github.com/ZiRO-Bot/jishaku", rev = "9174fad992247c88ca9b3202d44938c4d46e9776"}
Pillow = "9.3.0"
python-dateutil = "2.8.2"
Levenshtein = "0.20.3"
pytz = "2021.3"
pyparsing = "2.4.7"
requests = "2.28.1"
uvloop = {version = "^0.17.0", optional = true}
typing-extensions = "4.4.0"
asyncpg = {version = "*", optional = true}
aiomysql = {version = "*", optional = true}
aiosqlite = ">=0.16.0, <0.18.0"
asyncmy = { version = "^0.2.5", optional = true }
PyNaCl = {version = ">=1.3.0,<1.5", optional = true}
tortoise-orm = "0.19.3"
orjson = {version = "3.8.3", optional = true}
single-source = "0.3.0"
pyzmq = "^25.0.0"
aerich = "0.7.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pre-commit = "^2.13.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
dpytest = "^0.6"

[tool.poetry.group.github-actions]
optional = true

[tool.poetry.group.github-actions.dependencies]
pytest-github-actions-annotate-failures = "^0.1.7"

[tool.poetry.extras]
postgresql = ["asyncpg"]
mysql = ["aiomysql"]
"mysql+asyncmy" = ["asyncmy"]
voice = ["PyNaCl"]
speedup = ["uvloop", "orjson"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2

[tool.aerich]
tortoise_orm = "aerichConfig.t"
location = "./src/main/migrations"
src_folder = "./."

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
