[project]
name = "Z3R0"
version = "3.7.0"
description = "A multi-purpose open source discord bot"
authors = [
    {name = "null2264", email = "palembani@gmail.com"},
]
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
dependencies = []

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/src/zibot",
    "-e file:///${PROJECT_ROOT}/src/tse",
    "-e file:///${PROJECT_ROOT}/src/test",
    "black>=22.10.0",
    "isort>=5.10.1",
    "pre-commit>=2.13.0",
    "pdm-mina>=0.2.2",
]

[tool.pdm.scripts]
bot = {call = "zibot.__main__:run"}
datamigration = {call = "zibot.__main__:datamigration"}

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2

[tool.aerich]
tortoise_orm = "aerichConfig.t"
src_folder = "./."

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
